updated url of tomcat

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -19,7 +19,7 @@ pipeline
                 {
                   try
                   {
-                     git 'https://github.com/keshavr21/maven_test.git'
+                     git 'https://github.com/Jeevan-2/maven_test.git'
                   }
                   catch(Exception e1)
                   {
@@ -56,7 +56,7 @@ pipeline
                {
                  try 
                  {
-                     deploy adapters: [tomcat9(credentialsId: 'tomcat', path: '', url: 'http://172.31.40.147:8080/')], contextPath: 'testapp', war: '**/*.war'
+                     deploy adapters: [tomcat9(credentialsId: 'tomcat', path: '', url: 'http://3.108.223.67:8080/')], contextPath: 'testapp', war: '**/*.war'
                  }
                  catch(Exception e3)
                  {
@@ -90,7 +90,7 @@ pipeline
         {
             steps
             {
-                deploy adapters: [tomcat9(credentialsId: 'tomcat', path: '', url: 'http://172.31.40.147:8080/')], contextPath: 'prod', war: '**/*.war'
+                deploy adapters: [tomcat9(credentialsId: 'tomcat', path: '', url: 'http://3.108.223.67:8080/')], contextPath: 'testapp', war: '**/*.war'
             }
         }
 
